# RustPACGen

./: Cargo.toml  README.md  board-peripheral-schema.json  digilent-hs2.cfg  pac-schema.json
pac/: Cargo.toml
pac/src/: lib.rs
pac/src/uart/: mod.rs
pac/src/uart/control/: mod.rs
pac/src/uart/mode/: mod.rs
resources/: zynq-700.json  zynq-peripherals.yaml
resources/peripherals/: uart.yaml
src/: config.rs  main.rs  parse.rs  utils.rs
src/config/: mod.rs
src/parse/: mod.rs  utils.rs
