[package]
name = "rust-pac-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
