[package]
name = "rust-pac-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["serde"] }
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
stringcase = "0.3.0"
syn = { version = "2.0.89", default-features = false, features = [
    "full",
    "parsing",
] }
